# playground

./: .gitignore  .gitmodules  AGENTS.md  CODEOWNERS  README.md  github-issue-sql-execution.md
.github/instructions/: frontend.instructions.md
backend/sql-api/: .gitignore  README.md  env.example  env.test.example  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/bigquery-console/: README.md  modern.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/mekong/: .gitignore  PWA.md  README.md  biome.json  env.local.example  jest.config.js  modern-app-env.d.ts  modern.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/sample/: DEPLOYMENT.md  Dockerfile  docker-compose.yml  next.config.mjs  package.json  vercel.json
iac/: Pulumi.aws.yaml  Pulumi.vm-hcloud.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  requirements.txt
iac/configs/: Pulumi.pulumi-fundamentals.yaml
iac/registry/: images.py
iac/stacks/aws/: __init__.py  kms.py
iac/stacks/aws/iam/: assignments.py  group_memberships.py  groups.py  managed_policy_attachment.py  permission_sets.py  sso.py  users.py
iac/stacks/dbs_postgres_replication/: README.md  __init__.py  primary_init.sh  replica_init.sh  test_api.py
iac/stacks/pulumi-fundamentals/: __init__.py
iac/stacks/vm-hcloud/: README.md  __init__.py
iac/stacks/vm_docker/: __init__.py
iac/stacks/vm_docker/containers/: postgresql.py  ubuntu.py
iac/stacks/vm_docker/images/: registry.py
simulator/artillery/: README.md
(+209 files in other folders)
