[project]
name = "iac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "v2kk", email = "vinhdangphuc@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-docker>=4.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stacks", "configs"]